err/ib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ext'...
Compiling './lib/python3.5/site-packages/ext/EClientSocket.py'...
***   File "./lib/python3.5/site-packages/ext/EClientSocket.py", line 132
    except (Exception, ), e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ext/EReader.py'...
***   File "./lib/python3.5/site-packages/ext/EReader.py", line 92
    except (Exception, ), ex:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ib-0.8.0.egg-info'...
Listing './lib/python3.5/site-packages/lib'...
Compiling './lib/python3.5/site-packages/lib/__init__.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (__init__.py, line 30)
Listing './lib/python3.5/site-packages/opt'...
Compiling './lib/python3.5/site-packages/opt/connection.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (connection.py, line 44)
Compiling './lib/python3.5/site-packages/opt/dispatcher.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (dispatcher.py, line 35)
Compiling './lib/python3.5/site-packages/opt/message.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (message.py, line 27)
Compiling './lib/python3.5/site-packages/opt/messagetools.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (messagetools.py, line 22)
Compiling './lib/python3.5/site-packages/opt/receiver.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (receiver.py, line 63)
Compiling './lib/python3.5/site-packages/opt/sender.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (sender.py, line 30)
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sym'...
Listing './share'...
Listing './share/python-wheels'...
